--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <title>CPS test</title>
+    <style>
+        .timer {
+            user-select: none;
+        }
+    </style>
 </head>
+
 <body>
-    
+
     <section class="clicker">
         <div class="container">
 
             <h1 class="clicker__title">кликай как можно быстрее!</h1>
+            <span class="timer">0</span>
             <div class="clicker__img">
                 <img src="img/arrow.png" alt="↓" class="clicker__icon">
             </div>
@@ -28,4 +36,5 @@
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
